# bedrock-python.github.io

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: docs.yml
docs/: index.md
docs/blog/: .authors.yml  index.md
docs/blog/archive/: index.md
docs/blog/category/: design.md  index.md  libraries.md  meta.md  releases.md  tools.md  tutorials.md
docs/blog/posts/: 2026-05-15-transactional-outbox-with-omni-box.md  2026-05-28-introducing-mr-review.md  2026-05-30-welcome.md
docs/javascripts/: bedrock.js
docs/libraries/: index.md
docs/stylesheets/: bedrock.css
docs/tools/: index.md
overrides/: main.html
overrides/partials/: footer.html
